Add meta tag to index.html for mobile viewing

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta name="viewport" content="width=device-width">
 	<title>Turnspro Slider Calculator</title>
 	<script src="https://unpkg.com/react@16.3.0-alpha.1/umd/react.development.js"></script>
 	<script src="https://unpkg.com/react-dom@16.3.0-alpha.1/umd/react-dom.development.js"></script>
